--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
+* {
+  box-sizing: border-box;
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* padding: 32px 30px; */
+  font-family: 'Josefin Sans';
+  width: 100%;
+  height: 100%;
+}
+
+main {
+  background-color: #015871;
+  display: flex;
+  padding: 32px 30px;
+  margin-top: 182px;
+  opacity: 0;
+  animation: appear 8s 8s forwards;
+}
+
+/* .cloud {
+  z-index: 8;
+  position: absolute;
+  width: 111%;
+  right: 91px;
+  top: 16px;
+} */
+
+/* nav {
+  text-align: right;
+  display: flex;
+  top: 0;
+  width: 100%;
+  left: 0;
+  padding-left: 18px;
+  padding-top: 13px;
+  margin-left: -6px;
+  padding-bottom: 15px;
+  position: fixed;
+  z-index: 100;
+} */
+
+/* .hi {
+  position: absolute;
+  top: 105px;
+  left: 0px;
+  right: 0;
+  text-align: center;
+  opacity: 0;
+  animation: disappear 1.3s 2.5s forwards ;
+}
+
+.im {
+  position: absolute;
+  top: 105px;
+  left: 0px;
+  right: 0;
+  text-align: center;
+  opacity: 0;
+  animation: disappear 4.5s 3.5s forwards;
+}
+
+.david {
+  position: relative;
+  bottom: 87px;
+  right: 88px;
   color: white;
+  text-shadow: 0 0 12px white;
+  opacity: 0;
+  animation: appear 3s 4.7s forwards;
 }
 
-.App-link {
-  color: #61dafb;
+.acosta {
+  position: relative;
+  bottom: 126px;
+  left: 61px;
+  color: white;
+  text-shadow: 0 0 12px white;
+  opacity: 0;
+  animation: appear 3s 5.5s forwards;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.acosta, .david {
+  font-weight: lighter;
+  font-size: 3.4rem;
+} */
