fixed css layout issues by removing 100percent height from html, root, and body. Next: Continue with project category implamentation and create popout models later on. Before that, create complete first draft of the portfolio and add resume to portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,12 @@
 }
 
 main {
+  background: linear-gradient(180deg, #015871 39px, #474747 90%);
+  color: white;
   background-color: #015871;
   display: flex;
-  padding: 32px 30px;
-  margin-top: 182px;
+  /* padding: 32px 30px; */
+  /* margin-top: 182px; */
   opacity: 0;
   animation: appear 8s 8s forwards;
 }
