--- a/src/components/Avatar/Avatar.styles.scss
+++ b/src/components/Avatar/Avatar.styles.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   z-index: 11;
   position: relative;
-  bottom: -8px;
+  // bottom: -8px;
   max-width: 200px;
   max-height: 200px;
   min-width: 30px;
