--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -1,17 +1,23 @@
 .header {
-    display: flex;
-    flex-direction: column;
-    padding: 32px 30px;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 32px 30px;
+  /* margin-bottom: 30px;*/
 }
 
 .intro {
     font-size: 1.2rem;
     text-align: center;
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0px;
     text-shadow: 0 0 6px white;
     color: lightgray;
-    top: -54px;
+    // top: -54px;
+    opacity: 0;
+    animation: appear 8s 8s forwards;
+
 }
 
 .hi {
@@ -35,10 +41,12 @@
   }
   
   .david {
-    top: -11px;
-    right: 77px;
+    /* top: 0px; */
+    right: 83px;
     color: white;
     text-align: center;
+    margin-top: 12px;
+    margin-bottom: 4px;
     text-shadow: 0 0 12px white;
     opacity: 0;
     animation: appear 3s 4.7s forwards;
@@ -46,8 +54,10 @@
   
   .acosta {
     text-align: center;
-    top: -55px;
-    left: 55px;
+    /* top: -13px; */
+    left: 38px;
+    margin-top: 0px;
+    margin-bottom: 17px;
     color: white;
     text-shadow: 0 0 12px white;
     opacity: 0;
@@ -60,3 +70,27 @@
     font-size: 2.5rem;
   }
 
+  @media (min-width: 350px) {
+    .intro {
+      text-align: center;
+      max-width: 271px;
+    }
+
+    .acosta, .david {
+      position: relative;
+      font-weight: lighter;
+      font-size: 2.7rem;
+    }
+
+    .david {
+      right: 93px;
+      margin-bottom: 0px;
+    }
+
+    .acosta {
+      left: 56px;
+    }
+
+
+
+  }
