--- a/src/components/ProjectsContainer/ProjectsContainer.styles.scss
+++ b/src/components/ProjectsContainer/ProjectsContainer.styles.scss
@@ -1,3 +1,35 @@
-.Container {
-    width:100%
+.projects-container {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    // border: solid 1px orange;
+    text-align: center;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 3em;
+    gap: 3em;
+}
+
+.title {
+    font-size: 46px;
+    font-weight: 300;
+    margin-bottom: 0px;
+}
+
+hr {
+    width: 70%;
+    background-color: #9c9c9ca6;
+    height: 4px;
+    border: none;
+    border-radius: 13px;
+    color: black;
+    margin: 0;
+}
+
+.category-summary {
+    margin-top: 0px;
+    margin-top: 0px;
+    font-size: 1.2rem;
+    font-weight: 100;
 }
