--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* body, html, #root, .App { height: 100%; } */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #001d25;
+  /* background: linear-gradient(180deg, #001d25 407px, #015871 100%); */
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
