implemented click on project to drop down more info with link to live demo. Seems a bit unintuitive, may remove this.

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ main {
   color: white;
   background-color: #015871;
   display: flex;
+  flex-direction: column;
   /* padding: 32px 30px; */
   /* margin-top: 182px; */
   opacity: 0;
