--- a/src/components/Project/Project.styles.scss
+++ b/src/components/Project/Project.styles.scss
@@ -1,10 +1,20 @@
 .project {
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.project-image-container {
+.project:hover {
+    cursor: pointer;
+}
+
+.project-info-container {
     width: 100%;
+    padding-left: 3px;
+    padding-right: 3px;
+    background-color: #313131cc;
+    border: 2px solid #9a9a9a;
+    border-radius: 9px;
 }
 
 .project-image {
@@ -12,6 +22,26 @@ flex-direction: column;
 }
 
 .project-summary {
-    font-size: 1.6rem;
-    font-weight: 200;
+    font-size: 1.2rem;
+    font-weight: 100;
+}
+
+.project-title {
+    font-weight: 300;
+    font-size: 1.4rem;
+}
+
+.project-links a {
+    text-decoration: none;
+    color: #44b67c;
+    font-weight: 600;
+    padding: 8px;
+    border: 1px solid white;
+    border-radius: 12px;
+    background-color: aliceblue;
+    font-size: 1.5rem;
+}
+
+.hidden {
+    display: none;
 }
