--- a/src/components/MobileMenu/Menu.styles.scss
+++ b/src/components/MobileMenu/Menu.styles.scss
@@ -1,8 +1,23 @@
 nav {
   top: 22px;
-  z-index: 100;
+  z-index: 101;
   position: fixed;
   left: 22px;
+}
+
+.modal {
+  z-index: -1;
+  background-color: #315254e0;
+  width: 100vh;
+  height: 112vh;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+
+    // transform-origin: 0% 0%;
+    // transform: translate(-100%, 0);
+    
+    // transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
 #menuToggle
@@ -134,6 +149,10 @@ nav {
   font-size: 22px;
   font-weight: 100;
   color: white;
+}
+
+#menu a {
+  z-index: 105;
 }
 
 /*
