--- a/src/components/MobileMenu/Menu.styles.scss
+++ b/src/components/MobileMenu/Menu.styles.scss
@@ -72,7 +72,9 @@ nav {
   position: relative;
   
   background: #cdcdcd;
-  border-radius: 3px;
+  // border-radius: 3px;
+  box-shadow: 5px 4px 20px black;
+  border-radius: 18px;
   
   z-index: 1;
   
@@ -149,6 +151,12 @@ nav {
   font-size: 22px;
   font-weight: 100;
   color: white;
+
+  &:hover {
+    box-shadow: 3px 3px 8px 6px black;
+    border-radius: 4px;
+    padding-left: 5px;
+  }
 }
 
 #menu a {
