--- a/src/components/About Me/AboutMe.styles.scss
+++ b/src/components/About Me/AboutMe.styles.scss
@@ -7,14 +7,15 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-top: 140px;
     margin-bottom: 3em;
-    gap: 3em;
+    // gap: 3em;
 }
 
 .title {
     font-size: 46px;
     font-weight: 300;
-    margin-bottom: 0px;
+    margin-bottom: 25px;
 }
 
 hr {
@@ -24,5 +25,18 @@ hr {
     border: none;
     border-radius: 13px;
     color: black;
-    margin: 0;
+    margin-bottom: 30px;
+}
+
+.about-me {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-size: 1.4em;
+    font-weight: 200;
+    line-height: 1.2;
+    text-align: left;
+}
+
+.adobe {
+    color: #ff7500;
 }
