--- a/src/components/WaterDrop/waterdrop.styles.scss
+++ b/src/components/WaterDrop/waterdrop.styles.scss
@@ -9,7 +9,6 @@
     margin-right: auto;
   }
   
-  
   div.drop {
     position: absolute;
     top: -25%;
@@ -21,13 +20,17 @@
     background: rgb(255, 255, 255);
     animation: drip 4s forwards;
   }
+
+  .speedup-drop {
+    animation: drip 1s forwards;
+  }
   
   .drop > div {
     position: relative;
     top: 0; left: 5px; right: 0; bottom: 0;
     text-align: center;
     opacity: 0;
-    animation: appear 8s 5.2s forwards;
+    // animation: appear 8s 5.2s forwards;
   }
   
   @keyframes appear {
