testing deploy with fa icons

--- a/src/components/ProjectsContainer/ProjectsContainer.styles.scss
+++ b/src/components/ProjectsContainer/ProjectsContainer.styles.scss
@@ -11,7 +11,7 @@
     gap: 3em;
 }
 
-.title {
+.project-container-title {
     font-size: 46px;
     font-weight: 300;
     margin-bottom: 0px;
@@ -24,7 +24,6 @@ hr {
     border: none;
     border-radius: 13px;
     color: black;
-    margin: 0;
 }
 
 .category-summary {
