--- a/src/components/About Me/AboutMe.styles.scss
+++ b/src/components/About Me/AboutMe.styles.scss
@@ -10,23 +10,26 @@
     margin-top: 140px;
     margin-bottom: 3em;
     // gap: 3em;
+
+    hr {
+        width: 70%;
+        background-color: #9c9c9ca6;
+        height: 4px;
+        border: none;
+        border-radius: 13px;
+        color: black;
+        margin-top: 10px;
+        margin-bottom: 44px;
+    }
 }
 
-.title {
+.about-me-title {
     font-size: 46px;
     font-weight: 300;
     margin-bottom: 25px;
 }
 
-hr {
-    width: 70%;
-    background-color: #9c9c9ca6;
-    height: 4px;
-    border: none;
-    border-radius: 13px;
-    color: black;
-    margin-bottom: 30px;
-}
+
 
 .about-me {
     margin-top: 5px;
