--- a/src/components/Ocean/waterfall.styles.scss
+++ b/src/components/Ocean/waterfall.styles.scss
@@ -55,8 +55,8 @@ opacity: 0;
   }
 }
 
-@media (min-width: 540px) {
- body {
-  //  background: orange;
+@media (min-width: 500px) {
+ .ocean {
+  //  top: 5px;
  }
 }
