--- a/src/components/Contact/Contact.styles.scss
+++ b/src/components/Contact/Contact.styles.scss
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     hr {
         margin-bottom: 50px;
+        max-width: 600px;
     }
 }
 
@@ -38,10 +39,11 @@
     display: flex;
     width: 100%;
     margin-top: 40px;
-    padding-left: 100px;
-    padding-right: 100px;
-    /* text-align: center; */
     justify-content: space-evenly;
+    max-width: 346px;
+    margin-left: auto;
+    display: flex;
+    margin-right: auto;
 
     li {
         border: solid 1px white;
@@ -100,3 +102,143 @@
     font-size: 1.4rem;
     text-shadow: 0px 20px 13px black;
 }
+
+
+@media (min-width: 400px) {
+
+    .links-container {
+      background-position-x: 218px;
+  }
+
+
+
+  }
+
+  @media (min-width: 500px) {
+    .links-container {
+        background-position-x: 286px;
+    }
+
+  }
+
+  @media (min-width: 600px) {
+    .links-container {
+        background-position-x: 409px;
+    }
+
+    // .links {
+    //     padding-left: 200px;
+    //     padding-right: 200px;
+    // }
+
+    .contact-email {
+        color: white;
+        text-decoration: none;
+        font-size: 2rem;
+        text-shadow: 0px 20px 13px black;
+    }
+
+  }
+
+  @media (min-width: 700px) {
+    .links-container {
+        background-position-x: 507px;
+    }
+
+    
+    .links {
+
+        li {
+            border: solid 1px white;
+            background: linear-gradient(45deg, #484848, white);
+            border-radius: 50%;
+            width: 80px;
+            display: flex;
+            justify-content: center;
+            height: 80px;
+            align-items: center;
+            box-shadow: 3px 14px 11px 0px #00000069;
+        }
+
+        .fa {
+            transform: scale(3, 3);
+            &.linked-in {
+                color: rgb(0, 83, 139);
+            }
+            &.github {
+                color: rgb(0, 83, 139);
+            }
+        }
+    }
+
+    .info p {
+        font-size: 1.2rem;
+        margin-top: 50px;
+    }
+    
+    .up-arrow {
+        transform: scale(6,6);
+        color: #00538b;
+    }
+
+    .up-arrow-container {
+        margin-top: 123px;
+        margin-bottom: 39px;
+        width: 100px;
+        height: 100px;
+    }
+
+
+  }
+
+  @media (min-width: 820px) {
+    .links-container {
+        background-position-x: 667px;
+    }
+
+    // .links {
+    //     padding-left: 300px;
+    //     padding-right: 300px;
+    // }
+
+  }
+
+  @media (min-width: 1024px) {
+    .links-container {
+        background-position-x: 719px;
+        background-position-y: 128px, 0px;
+    }
+
+  }
+
+  @media (min-width: 1300px) {
+    .links-container {
+        background-position-x: 1048px;
+        background-position-y: 31px, 0px;
+    }
+
+  }
+
+  @media (min-width: 1500px) {
+    .links-container {
+        background-position-x: 1348px;
+        background-position-y: 31px, 0px;
+    }
+
+  }
+
+  @media (min-width: 1600px) {
+    .links-container {
+        background-position-x: 1431px;
+        background-position-y: 31px, 0px;
+    }
+
+  }
+
+  @media (min-width: 1820px) {
+    .links-container {
+        background-position-x: 1731px;
+        background-position-y: 31px, 0px;
+    }
+
+  }
