--- a/src/components/ProjectsContainer/ProjectsContainer.styles.scss
+++ b/src/components/ProjectsContainer/ProjectsContainer.styles.scss
@@ -24,11 +24,20 @@ hr {
     border: none;
     border-radius: 13px;
     color: black;
+    max-width: 600px;
 }
 
 .category-summary {
     margin-top: 0px;
     margin-top: 0px;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     font-weight: 100;
+    line-height: 1.3;
+    max-width: 350px;
+}
+
+@media (min-width: 1025px) {
+    .projects-container {
+        padding-top: 43px;
+    }
 }
