--- a/src/components/MobileMenu/Menu.styles.scss
+++ b/src/components/MobileMenu/Menu.styles.scss
@@ -132,8 +132,8 @@ nav {
   position: absolute;
   width: 220px;
   margin: -100px 0 0 -50px;
-  padding: 120px 0px 5px 50px;
-  background: #3f3f3ffa;
+  padding: 120px 4px 28px 50px;
+  background: rgb(63 63 63 / 87%);
   border-radius: 13px;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
