--- a/src/components/Project/Project.styles.scss
+++ b/src/components/Project/Project.styles.scss
@@ -127,3 +127,9 @@
         font-size: 2.2rem;
     }
 }
+
+@media (min-width: 700px) {
+    .project-margin {
+        margin-bottom: 161px;
+    }
+}
