--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -111,8 +111,14 @@
 
     .links-container {
       background-position-x: 218px;
+    }
+
   }
 
+  @media (min-width: 500px) {
+    .header {
+      margin-bottom: 30px;
+    }
   }
 
   @media (min-width: 1025px) {
