--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   /* padding: 32px 30px; */
-  font-family: 'Josefin Sans';
+  font-family: "Josefin Sans";
   width: 100%;
   height: 100%;
 }
@@ -15,11 +15,16 @@
   // animation: appear 1s 1s forwards;
   animation: none;
   opacity: 1;
-  & h1, .intro, .avatar-container {
+  & h1,
+  .intro,
+  .avatar-container {
     animation: none;
     opacity: 1;
   }
-  & .hi, .drop-container,.drop-container:before, .drop-container:after  {
+  & .hi,
+  .drop-container,
+  .drop-container:before,
+  .drop-container:after {
     animation: none;
     visibility: hidden;
   }
@@ -29,7 +34,14 @@
 }
 
 main {
-  background: linear-gradient(180deg, #015871 39px, #474747 90%);
+  // background: linear-gradient(180deg, #015871 39px, #474747 90%);
+  background: linear-gradient(
+    180deg,
+    #015871 39px,
+    #474747 90%,
+    #ff4e00 99%,
+    transparent
+  );
   color: white;
   background-color: #015871;
   display: flex;
@@ -50,9 +62,9 @@ main {
   top: 18px;
   right: 14px;
   opacity: 0;
-  animation: disappear 9s  forwards;
+  animation: disappear 9s forwards;
 
-  &:hover{
+  &:hover {
     color: #ffffffbf;
     text-shadow: 0 0 8px #0297ff;
     box-shadow: 0 0 8px 1px #01ceff;
@@ -61,23 +73,16 @@ main {
   }
 }
 
-
-
 @media (min-width: 400px) {
   .main {
     padding: 5px 20px;
   }
-
-
 }
-
 
 @media (min-width: 500px) {
   .main {
     padding: 5px 50px;
   }
-
-
 }
 
 @media (min-width: 960px) {
@@ -95,11 +100,10 @@ main {
     top: 70px;
     left: 14px;
   }
-
 }
 
 // @media (max-width: 1300px) {
 //   .main {
-//     padding: 5px 
+//     padding: 5px
 //   }
 // }
